--- a/index.html
+++ b/index.html
@@ -5,45 +5,19 @@
 	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
 	<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>UXKM Template Site</title>
+	<title>UXKM Template Assets</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,400,400italic,700,700italic">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Jaldi">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
-	<link rel="stylesheet" type="text/css" href="css/reset.min.css">
-	<link rel="stylesheet" type="text/css" href="css/reference.css">
-	<link rel="stylesheet" type="text/css" href="css/prism.min.css">
-	<script type="text/javascript" src="js/plugin/prism.js"></script>
-	<!--[if lt IE 9]>
-		<script type="text/javascript" src="/js/plugin/html5.js"></script>
-		<script type="text/javascript" src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-	<![endif]-->
+	<style>
+	*{margin:0;padding:0;text-align:center;box-sizing:border-box;}
+	figure{}
+	figure img{width:100%;max-width:600px;}
+	figure figcaption{padding:10px;border:1px solid #ddd;}
+	</style>
 </head>
 <body>
-	<header class="header">
-		<h1 class="title">
-			<img src="images/transparent.png">
-			<strong class="anitxt"><!-- Reference --></strong>
-		</h1>
-		<nav class="nav page_action inner" data-speed="100">
-			<ul>
-				<li><a href="html.html">html</a></li>
-				<li><a href="css.html">css</a></li>
-				<li><a href="js.html">javascript</a></li>
-			</ul>
-			<button type="button" class="nav_open"><i>메뉴열기</i></button>
-		</nav>
-	</header>
-	<main class="container">
-	</main>
-	<footer class="footer">&copy; 2019 All Right Reserved. By UXKM.</footer>
-
-	<script type="text/javascript" src="js/jquery/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="js/jquery/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="js/common/uxDetect.min.js"></script>
-	<script type="text/javascript" src="js/plugin/jquery.color.js"></script>
-	<script type="text/javascript" src="js/common/ajaxui.min.js"></script>
+	<figure>
+		<img src="images/CSS3_and_HTML5_logos_and_wordmarks.svg" alt="CSS3 + HTML5 LOGO">
+		<figcaption>UXKEM Template Assets</figcaption>
+	</figure>
 </body>
 </html>
