--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>UXKM Template Assets</title>
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico">
 	<style>
 	*{margin:0;padding:0;text-align:center;box-sizing:border-box;}
 	figure{}
