--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<figure>
 		<img src="images/CSS3_and_HTML5_logos_and_wordmarks.svg" alt="CSS3 + HTML5 LOGO">
-		<figcaption>UXKEM Template Assets</figcaption>
+		<figcaption>&copy; 2019 All Right Reserved. By UXKM.</figcaption>
 	</figure>
 </body>
 </html>
