--- a/_assets/ncs/index.html
+++ b/_assets/ncs/index.html
@@ -40,11 +40,11 @@
 	</main>
 	<footer class="footer">&copy; 2019 All Right Reserved. By UXKM.</footer>
 
-	<script type="text/javascript" src="js/jquery/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="js/jquery/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="js/common/uxDetect.min.js"></script>
-	<script type="text/javascript" src="js/plugin/jquery.color.js"></script>
-	<script type="text/javascript" src="js/common/ajaxui.min.js"></script>
+	<script type="text/javascript" src="/resources/js/jquery/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" src="/resources/js/jquery/jquery.easing.min.js"></script>
+	<script type="text/javascript" src="/resources/js/common/uxDetect.min.js"></script>
+	<script type="text/javascript" src="/resources/js/plugin/jquery.color.min.js"></script>
+	<script type="text/javascript" src="js/ajaxui.min.js"></script>
 	<script>
 		$(function(){
 			$('[target="_blank"]').attr('title','새창열림');
