--- a/ukncs/uxkm-html.html
+++ b/ukncs/uxkm-html.html
@@ -4700,7 +4700,7 @@ function aud_play_pause() {
 						<dd>
 							자막의 주소 (.vtt 파일). 이것은 유효한 URL이여야 합니다. 이 속성은 반드시 정의되어야 합니다.
 						</dd>
-						<dt>[srclang] <code>&lt;track kind="subtitles" srclang="ko"&gt;</dt>
+						<dt>[srclang] <pre>&lt;track kind="subtitles" srclang="ko"&gt;</dt>
 						<dd>
 							자막 텍스트 데이터의 언어. 만일 kind 속성이 subtitles로 설정되었을 경우, srclang 속성은 반드시 정의되어야합니다.
 						</dd>
@@ -9662,27 +9662,392 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 			<section class="uksection">
 				<blockquote class="note" role="note">
 					<p>
-						
+						HTML5 표준 명세서에서는 웹 개발자가 표준화된 의미론적 체계를 가지고 웹 문서의 구조를 표현할 수 있게 해주는 몇 개의 새로운 요소들을 선보였습니다.<br>
+						이 문서에서는 이 새로운 요소들과 문서의 아웃라인을 의도한 대로 정의하는 법을 설명하고 있습니다.<br>
+						예를 들면 &lt;div&gt;는 콘텐츠에 대한 어떠한 내용도 포함하지 않지만, &lt;figcaption&gt;은 콘텐츠에 어떤 내용을 포함하고 있는지를 명확하게 포함합니다.<br>
+						새로운 의미론적 요소들은 HTML5에서 웹사이트의 내용을 구분하는 것을 향상시키기 위해 추가되었습니다. <br>
+						개발자들은 표시된 목적 이외의 용도로 의미론적 요소를 사용하지 않도록 하는 것이 중요합니다.
 					</p>
 				</blockquote>
 				<h3 id="html4-layout">HTML4에서의 문서 구조</h3>
 				<article>
 					<p>
-
+						문서의 구조, 즉 &lt;body&gt;와 &lt;/body&gt; 사이에 있는 것의 의미론적 구조는, 페이지 내용을 사용자에게 전달하는 데 중요한 토대가 됩니다.<br>
+						HTML4에선 일종의 섹션과 그 하위 섹션으로 구분하는 개념을 써서 문서의 구조를 표현합니다.<br>
+						섹션은 HTML &lt;div&gt;요소와 함께 그 안에 있는 제목을 정의하는 HTML 제목 요소(&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, 혹은 &lt;h6&gt;)를 써서 정의됩니다.<br>
+						이런 HTML 구획 요소와 HTML 제목 요소의 관계가 문서의 구조와 그 아웃라인을 결정짓게 됩니다.<br>
+						보통 div 요소로 레이아웃 구조를 표현합니다.
 					</p>
+					<figure>
+						<figcaption>HTML4 기본 레이아웃</figcaption>
 <pre><code>
-
+&lt;div class="wrap"&gt;
+	&lt;div class="header"&gt;
+		상단 영역
+	&lt;/div&gt;
+	&lt;div class="main"&gt;
+		&lt;div class="sidebar"&gt;
+			왼쪽 그룹(왼쪽 메뉴)
+		&lt;/div&gt;
+		&lt;div class="csection"&gt;
+			콘텐츠 영역
+		&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div class="footer"&gt;
+		하단 영역
+	&lt;/div&gt;
+&lt;/div&gt;
 </code></pre>
+					</figure>
+
+					<figure>
+						<figcaption>HTML4 콘텐츠 기본 구조</figcaption>
+<pre><code>
+&lt;div class="section" id="html-element"&gt;
+	&lt;h1&gt;HTML&lt;/h1&gt;
+	&lt;p&gt;이번 섹션에선, HTML 기본 구조에 대해 알아보겠습니다.
+	...섹션 내용 진행 중...
+	&lt;div class="subsection" id="forest-habitat"&gt;
+		&lt;h2&gt;HTML 이란?&lt;/h2&gt;
+		&lt;p&gt;HTML은 Tim Berners-Lee, Robert Cailliau 및 1989 년 부터 시작된 사람들에 의해 처음 만들어졌습니다.
+		...하위 섹션 내용 진행 중...
+	&lt;/div&gt;
+&lt;/div&gt;
+
+&lt;!--
+위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.
+1. HTML
+	 1.1 HTML 이란?
+
+
+위와 같이 새로운 섹션을 정의할 때 &lt;div&gt; 요소가 꼭 필요한 것은 아닙니다. 단순히 HTML 제목 요소만 있으면 새로운 섹션이 시작됨을 자동으로 암시해 줍니다.
+&lt;h1&gt;HTML&lt;/h1&gt;
+&lt;p&gt;이번 섹션에선, HTML 기본 구조에 대해 알아보겠습니다.
+...섹션 내용 진행 중...
+&lt;h2&gt;HTML 이란?&lt;/h2&gt;
+&lt;p&gt;HTML은 Tim Berners-Lee, Robert Cailliau 및 1989 년 부터 시작된 사람들에 의해 처음 만들어졌습니다.
+...하위 섹션 내용 진행 중...
+&lt;h2&gt;HTML 기본구조&lt;/h2&gt;
+&lt;h1&gt;CSS&lt;/h1&gt;
+
+위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.
+1. HTML
+   1.1 HTML 이란?
+   1.2 HTML 기본구조
+2. CSS
+--&gt;
+</code></pre>
+					</figure>
 				</article>
 
 				<h3 id="html5-layout">HTML5에서의 문서 구조</h3>
 				<article>
 					<p>
-
+						&lt;body&gt; 요소 안에 배치된 콘텐츠는 모두 적어도 하나의 섹션 안에 포함되어 자리하게 됩니다.<br>
+						그리고 HTML5에서 섹션은 서로 중첩되서 표시될 수도 있습니다.<br>
+						&lt;body&gt; 요소에 의해 정의된 주요 섹션을 제외하고, 모든 섹션은 명시적으로나 혹은 은연중 자동으로 구분되어 정의될 수 있습니다.<br>
+						명시적으로 정의되는 섹션은 &lt;body&gt;,  &lt;section&gt;,  &lt;article&gt;,  &lt;aside&gt;, &lt;footer&gt;,  &lt;header&gt;, 
+						그리고 &lt;nav&gt; 요소들 안에 포함된 콘텐츠입니다.
+						<br><br>
+						각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 &lt;h1&gt; 제목을 가질 수 있습니다. 
 					</p>
-<pre><code>
 
+					<figure>
+						<figcaption>HTML5 기본 레이아웃</figcaption>
+<pre><code>
+&lt;section class="wrap"&gt;
+	&lt;header class="header"&gt;
+		상단 영역
+	&lt;/header&gt;
+	&lt;main class="main" role="main"&gt;
+		&lt;section class="sidebar"&gt;
+			왼쪽 그룹(왼쪽 메뉴)
+		&lt;/section&gt;
+		&lt;section class="csection"&gt;
+			콘텐츠 영역
+		&lt;/section&gt;
+	&lt;/main&gt;
+	&lt;footer class="footer"&gt;
+		하단 영역
+	&lt;/footer&gt;
+&lt;/section&gt;
 </code></pre>
+					</figure>
+
+					<figure>
+						<figcaption>HTML5 콘텐츠 기본 구조</figcaption>
+<pre><code>
+&lt;section&gt;
+	&lt;h1&gt;HTML&lt;/h1&gt; 
+	&lt;section&gt;
+		&lt;h1&gt;HTML 이란?&lt;/h1&gt;
+		&lt;p&gt;이번 섹션에선, HTML에 대해 알아보도록 하겠습니다.&lt;/p&gt;
+	&lt;/section&gt;
+	&lt;section&gt;
+		&lt;h1&gt;HTML 기본구조&lt;/h1&gt;
+		&lt;p&gt;HTML 기본구조는 다음과 같습니다.&lt;/p&gt;
+	&lt;/section&gt;
+	&lt;aside&gt;
+		&lt;p&gt;광고 구역&lt;/p&gt;
+	&lt;/aside&gt;
+&lt;/section&gt;
+&lt;footer&gt;
+	&lt;p&gt;&copy; 2019 UXKM.GITHUB.IO&lt;/p&gt;
+&lt;/footer&gt;
+
+&lt;!--
+위에 있는 HTML 코드에선 가장 윗 단계에 두 개의 섹션이 정의되었으며,
+첫 번째 섹션에선 세 개의 하위 섹션이 존재합니다.
+그래서 위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.
+1. HTML
+   1.1 HTML 이란?
+   1.2 HTML 기본구조
+   1.3 광고 구역 (aside)
+
+
+위와 같이 새로운 섹션을 정의할 때 &lt;div&gt; 요소가 꼭 필요한 것은 아닙니다. 단순히 HTML 제목 요소만 있으면 새로운 섹션이 시작됨을 자동으로 암시해 줍니다.
+&lt;h1&gt;HTML&lt;/h1&gt;
+&lt;p&gt;이번 섹션에선, HTML 기본 구조에 대해 알아보겠습니다.
+...섹션 내용 진행 중...
+&lt;h2&gt;HTML 이란?&lt;/h2&gt;
+&lt;p&gt;HTML은 Tim Berners-Lee, Robert Cailliau 및 1989 년 부터 시작된 사람들에 의해 처음 만들어졌습니다.
+...하위 섹션 내용 진행 중...
+&lt;h2&gt;HTML 기본구조&lt;/h2&gt;
+&lt;h1&gt;CSS&lt;/h1&gt;
+
+위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.
+1. HTML
+   1.1 HTML 이란?
+   1.2 HTML 기본구조
+2. CSS
+--&gt;
+</code></pre>
+					</figure>
+
+					<dl>
+						<dt>HTML5에서 제목 지정하는 법</dt>
+						<dd>
+							비록 명시적 HTML 섹션 요소가 문서의 전체 구조를 정해주기는 하지만,<br>
+							그 아웃라인을 좀 더 명확하게 표현하려면 제목의 사용도 중요합니다.<br>
+							기본 규칙은 단순합니다.<br>
+							처음 쓰인 HTML 제목 요소(&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt; 중 하나)가 해당 섹션의 제목으로 정해집니다.
+							<br><br>
+							제목 요소엔 요소 이름에 붙은 숫자를 가지고 계급을 매기는데, <br>
+							&lt;h1&gt;이 최상위 계급이며 &lt;h6&gt;는 최하위 계급이 됩니다. <br>
+							제목 간 계급의 상대적 등급은 오로지 같은 섹션 안에서만 중요해집니다. <br>
+							이 말은 섹션의 구조가 문서의 아웃라인을 결정짓는 데 중요한 변수로 작용하지만, <br>
+							섹션 안에서 사용된 제목의 계급은 여기에 아무런 관련이 없다는 얘기입니다.<br>
+							아래 예시를 들어보면,
+<pre><code>
+&lt;section&gt;
+	&lt;h1&gt;둥근귀코끼리&lt;/h1&gt;    
+	&lt;p&gt;이번 섹션에선, 잘 알려지지 않은 둥근귀코끼리에 관해 알아보겠습니다.
+		...계속 된 섹션 내용...
+	&lt;section&gt;
+		&lt;h2&gt;서식지&lt;/h2&gt;
+		&lt;p&gt;둥근귀코끼리는 나무에 살지는 않고 나무들 사이에 그 서식지를 이루고 있습니다.
+		...계속 된 하위 섹션 내용...
+	&lt;/section&gt;
+&lt;/section&gt;
+&lt;section&gt;
+	&lt;h3&gt;몽골 게르빌루스쥐&lt;/h3&gt;
+	&lt;p&gt;이번 섹션에선, 잘 알려진 몽골 게르빌루스쥐에 관해 알아보겠습니다.
+		...계속 된 섹션 내용...
+&lt;/section&gt;
+&lt;!--
+이는 다음과 같은 아웃라인을 갖게 됩니다.
+1. 둥근귀코끼리
+   1.1 서식지
+2. 몽골 게르빌루스쥐
+
+여기서 쓰인 제목 요소의 계급(위 보기에선 처음 최상위 섹션의 &lt;h1&gt;, 
+그 하위 섹션의 &lt;h2&gt; 
+그리고 두 번째 최상위 섹션에서 사용된 &lt;h3&gt;)은 중요하지 않다는 점을 주목하십시오. 
+(명시적으로 정의된 섹션의 제목으로 어떠한 계급을 써도 상관은 없지만, 이 방식이 권장되는 것은 아닙니다.)
+--&gt;
+</code></pre>
+						</dd>
+						<dt>은연중 자동으로 정의되는 섹션</dt>
+						<dd>
+							HTML5에서 소개된 명시적 섹션 요소들만이 문서의 아웃라인을 정의하는 데 절대적으로 필요한 요소는 아니므로,<br>
+							기존 웹에서 지배적으로 사용되는 HTML4와의 호환성을 지키려는 노력의 일환으로, 이들 없이도 섹션을 정의하는 또 하나의 방법이 있습니다. <br>
+							이를 은연중 자동으로 정의되는 섹션이라 하겠습니다.
+							<br><br>
+							HTML 제목 요소(&lt;h1&gt;부터 &lt;h6&gt;)는 만약에 그들이 속한 상위 명시적 섹션의 첫 번째 제목으로 사용되지 않았다면, <br>
+							자동으로 또 하나의 새로운 암묵적인 섹션으로 분류/정의되어 집니다. <br>
+							이들 암묵적 섹션이 문서 아웃라인에서 위치하게 되는 기준은 기존 이들 제목을 포함하고 있는 상위 섹션에서 사용된 제목과의 상대적 계급에 따라 결정됩니다. <br>
+							만약 전에 사용된 제목보다 계급이 더 낮다면, 은연중으로 해당 섹션의 하위 섹션으로 자리 잡게 됩니다. <br>
+							아래 코드를 살펴보면,
+<pre><code>
+&lt;section&gt;
+	&lt;h1&gt;둥근귀코끼리&lt;/h1&gt;  
+	&lt;p&gt;이번 섹션에선, 잘 알려지지 않은 둥근귀코끼리에 관해 알아보겠습니다.
+		...섹션 내용 진행 중...
+	&lt;h3 class="implicit subsection"&gt;서식지&lt;/h3&gt;
+	&lt;p&gt;둥근귀코끼리는 나무에 살지는 않고 나무들 사이에 그 서식지를 이루고 있습니다.
+		...하위 섹션 내용 진행 중...
+&lt;/section&gt;
+&lt;!--
+이는 다음과 같은 아웃라인을 갖게 됩니다.
+1. 둥근귀코끼리
+   1.1 서식지 (h3 요소에 의해 은연중 자동으로 정의됨)
+
+만약에 이전에 사용된 제목과 같은 계급이라면, (명시적으로 정의되었을 수도 있지요!) 
+바로 이전 섹션과 구분되면서 같은 계급의 또 하나의 새로운 암묵적 섹션으로 자리하게 됩니다:
+--&gt;
+</code></pre>
+
+<pre><code>
+&lt;section&gt;
+	&lt;h1&gt;둥근귀코끼리&lt;/h1&gt;  
+	&lt;p&gt;이번 섹션에선, 잘 알려지지 않은 둥근귀코끼리에 관해 알아보겠습니다.
+		...섹션 내용 진행 중...
+	&lt;h1 class="implicit section"&gt;몽골 게르빌루스쥐&lt;/h1&gt;
+	&lt;p&gt;몽골 게르빌루스쥐는 귀엽고 작은 포유 동물입니다.
+		...섹션 내용 진행 중...
+&lt;/section&gt;
+&lt;!--
+위 코드는 다음과 같은 문서 아웃라인을 갖게 됩니다.
+
+1. 둥근귀코끼리
+2. 몽골 게르빌루스쥐 (h1 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)
+
+만약에 이전에 사용된 제목보다 더 높은 계급의 제목이 사용되었다면, 
+이전 섹션과 구분되면서 더 높은 제목의 계급을 가진 또 하나의 새로운 암묵적 섹션으로 자리하게 됩니다.
+--&gt;
+</code></pre>
+
+<pre><code>
+&lt;body&gt;
+	&lt;h1&gt;포유 동물&lt;/h1&gt;
+	&lt;h2&gt;고래&lt;/h2&gt;
+	&lt;p&gt;이번 섹션에선, 유영하는 고래에 관해 알아보겠습니다.
+		...섹션 내용 진행 중...
+	&lt;section&gt;
+		&lt;h3&gt;둥근귀코끼리&lt;/h3&gt;  
+		&lt;p&gt;이번 섹션에선, 잘 알려지지 않은 둥근귀코끼리에 관해 알아보겠습니다.
+			...섹션 내용 진행 중...
+		&lt;h3&gt;몽골 게르빌루스쥐&lt;/h3&gt;
+			&lt;p&gt;몽골 게르빌루스쥐의 무리는 몽골을 훨씬 벗어나는 구역까지 퍼져있습니다.
+				...하위 섹션 내용 진행 중...
+		&lt;h2&gt;파충류&lt;/h2&gt;
+			&lt;p&gt;파충류는 냉혈 동물입니다.
+					...하위 섹션 내용 진행 중...
+	&lt;/section&gt;
+&lt;/body&gt;
+&lt;!--
+위 코드는 다음과 같은 문서 아웃라인을 갖게 됩니다:
+
+1. 포유 동물
+   1.1 고래 (h2 요소에 의해 자동으로 정의됨)
+   1.2 둥근귀코끼리 (섹션 요소에 의해 명시적으로 정의됨)
+   1.3 몽골 게르빌루스쥐 (h3 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)
+2. 파충류 (h2 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)
+
+단순히 써진 제목의 태그들만 살펴본다면, 이것은 결코 예상했던 문서의 아웃라인은 아닐 것입니다. 
+그래서 작성한 마크업이 다른 사람에게도 쉽게 이해되도록 하려면, 
+섹션을 구분할 때 명시적 섹션 요소의 태그들을 쓰는 것이 바람직하며, 
+원래 의도하는 섹션의 중첩 수준을 고려해서 그에 어울리는 제목의 계급을 써야 합니다. 
+
+그런데 이것이 꼭 HTML5 명세서에서 요구하는 필수 준수 사항은 아닙니다. 
+만약에 작성한 문서의 아웃라인을 브라우저가 원래 의도한 방향으로 표시해 주지 못한다면, 
+혹시 사용한 제목 요소가 은연중 자동으로 기존 섹션과 구분되게 사용되었는지 확인해 보시기 바랍니다.
+
+제목의 계급은 항상 해당 섹션의 중첩 수준과 일치하도록 쓰라는 규칙의 예외도 있을 수 있는데, 
+그 중 하나 여러 문서에서 공통으로 재사용되는 섹션의 경우가 있습니다. 
+예를 들면, 섹션 내용이 어떤 콘텐츠 관리 시스템에 저장되어 실시간으로 여러 다른 저장된 내용과 함께 조합되어 문서에 표시될 때가 있습니다. 
+이 경우엔, 재사용되는 섹션의 가장 최상위 제목으로 &lt;h1&gt;부터 시작해서 사용하실 것을 권장합니다. 
+그러면 재사용되는 섹션의 중첩 수준은 문서의 섹션 계층 중 해당 섹션이 삽입되어 보이는 위치에 따라 자동으로 결정될 것입니다. 
+이 경우에도 명시적 섹션 태그가 문서 아웃라인을 명확히 하는 데 도움을 줍니다.
+--&gt;
+</code></pre>
+						</dd>
+						<dt>섹션 구분의 근원점</dt>
+						<dd>
+							<p>
+								섹션 구분의 근원점은 HTML 요소 중 자기만의 아웃라인을 가질 수는 있지만,<br>
+								그 안의 섹션이나 제목이 자기 위에 있는 요소의 아웃라인에는 어떠한 영향도 끼치지 않는 것들을 가리킵니다.<br>
+								논리적으로 따지면 당연히 문서의 섹션을 구분하는데 그 근본이 되는 &lt;body&gt;가 여기에 포함되고,<br>
+								이 외에도 종종 외부 콘텐츠를 페이지에 표시하는 데 사용되는 다음과 같은 요소들도 있습니다.<br>
+								&lt;blockquote&gt;, &lt;details&gt;, &lt;fieldset&gt;, &lt;figure&gt;, &lt;td&gt;
+							</p>
+
+<pre><code>
+&lt;section&gt;
+	&lt;h1&gt;숲 코끼리&lt;/h1&gt; 
+	&lt;section&gt;
+		&lt;h2&gt;소개&lt;/h2&gt;
+		&lt;p&gt;이번 섹션에선, 잘 알려지지 않은 둥근귀코끼리에 관해 알아보겠습니다.&lt;/p&gt;
+	&lt;/section&gt;
+	&lt;section&gt;
+		&lt;h2&gt;서식지&lt;/h2&gt;
+		&lt;p&gt;둥근귀코끼리는 나무에 살지는 않고 나무들 사이에 그 서식지를 이루고 있습니다.
+			과학자들은 "&lt;cite&gt;보르네오 섬의 둥근귀코끼리&lt;/cite&gt;"라는 제목의 책에서 다음과 같이 서술하고 있습니다:&lt;/p&gt;
+		&lt;blockquote&gt;
+			&lt;h1&gt;보르네오 섬&lt;/h1&gt;
+			&lt;p&gt;보르네오 섬에 서식하는 둥근귀코끼리...&lt;/p&gt;
+		&lt;/blockquote&gt;
+	&lt;/section&gt;
+&lt;/section&gt;
+&lt;!--
+위의 보기에선 다음과 같은 문서 아웃라인을 가지게 됩니다:
+
+1. 숲 코끼리
+   1.1 소개
+   1.2 서식지
+
+이 문서의 아웃라인을 살펴보면 외부 인용 문구로 사용된 &lt;blockquote&gt; 요소의 경우, 
+섹션 구분의 근원이 되는 요소 중 하나로서 자기가 포함하고 있는 내부 내용의 아웃라인이 외부의 것과 완전히 차단되면서, 
+전체 문서의 아웃라인에는 포함되지 않았습니다.
+--&gt;
+</code></pre>
+						</dd>
+						<dt>문서의 아웃라인 밖에 존재하는 섹션</dt>
+						<dd>
+							<p>HTML5에선 웹 문서의 주요 아웃라인에 속하지 않는 섹션을 정의할 수 있도록 하는 새로운 네 가지의 요소들을 소개하고 있습니다.</p>
+							<ul>
+								<li>
+									HTML Aside 섹션 요소(&lt;aside&gt;)는 주요 문맥을 담은 요소와 어떤 관련성을 지니고 있지만,<br>
+									어떤 부연 설명 표시 영역이나 광고처럼 문맥의 주요 흐름 줄기엔 속하지 않는 섹션을 나타냅니다. <br>
+									물론 자기만의 아웃라인을 가지고 있어서, 문서의 주요 아웃라인엔 포함되지 않습니다.
+								</li>
+								<li>
+									HTML Navigational 섹션 요소(&lt;nav&gt;)는 내비게이션 링크들을 포함하고 있는 섹션입니다. <br>
+									이런 링크들은 문서에 여러 개가 있을 수 있는데, <br>
+									예를 들어, 콘텐츠 목차와 같은 페이지 내부 링크나 사이트의 내비게이션 링크가 있습니다. <br>
+									이런 링크는 문서의 주요 문맥과 아웃라인에 포함되지 않아서 보통 처음에는 스크린 리더나 비슷한 보조 기술을 사용하는 장치에서 읽어드리지 않을 수도 있습니다.
+								</li>
+								<li>
+									HTML Header 섹션 요소(&lt;header&gt;)는 페이지의 도입부로서 보통 로고나 사이트 이름 그리고 수평 메뉴를 포함하고 있습니다. <br>
+									이름에서 풍기는 느낌과는 달리 꼭 페이지 처음에 있을 필요는 없습니다.
+								</li>
+								<li>
+									HTML Footer 섹션 요소(&lt;footer&gt;)는 페이지의 종결부로서 보통 저작권이나 법률적 고지 혹은 약간의 링크들을 포함하고 있습니다. <br>
+									이것도 역시 이름이 가진 직설적 의미와 달리 페이지 끝에 있을 필요는 없습니다.
+								</li>
+							</ul>
+						</dd>
+						<dt>섹션을 구분짓는 요소의 주소와 발행 시간</dt>
+						<dd>
+							문서를 작성하다 보면 종종 저자의 이름이나 주소와 같은 연락 정보를 공개하고 싶을 때가 있습니다. <br>
+							HTML4에선 이런 목적으로 &lt;address&gt; 요소가 쓰였는데, HTML5에선 여기에 더 보완된 내용이 추가되었습니다.<br>
+							가끔 문서에는 여러 명의 저자가 작성한 여러 개의 섹션이 포함되어 있을 수도 있습니다. 
+							<br><br>
+							메인 페이지의 저자와 다른 또 다른 사람이 작성한 콘텐츠가 포함된 섹션은 &lt;article&gt;  요소를 써서 정의합니다. <br>
+							이렇게 하면, &lt;address&gt; 요소는 지정된 위치에 따라 가장 가까운 상위의 &lt;body&gt; 혹은 &lt;article&gt;과 연관된 정보로 표시됩니다.<br>
+							비슷하게, HTML5의 새 &lt;time&gt; 요소에 pubdate boolean 속성이 지정되었다면 문서 전체의 발행 날짜를 표시해 주는데, <br>
+							article에서처럼, 가장 가까운 상위의 &lt;body&gt; 혹은 &lt;article&gt; 과 연관된 정보로 표시됩니다.
+						</dd>
+					</dl>
+
+					<blockquote class="note" role="note">
+						<p>
+							HTML5에서 소개된 새로운 섹션과 제목 요소는 웹 문서의 구조와 아웃라인을 표준화된 방법으로 작성할 수 있게 도와줍니다.<br>
+							또한, HTML5를 지원하는 브라우저 사용자나 페이지 내용을 제대로 전달하는데 그 구조 파악이 중요한, <br>
+							예를 들어 보조 지원 기술의 도움으로 페이지의 내용을 파악하는, 사용자 모두에게 커다란 이득을 안겨다 줍니다.<br>
+							새로 소개된 의미가 담긴 요소들은, 약간의 노력만 기울인다면, 사용이 간편해서 HTML5 미지원 브라우저에서도 온전히 사용하실 수 있습니다.
+						</p>
+					</blockquote>
 				</article>
 
 				<h3 id="frameset-element">프레임셋 문서 구조 <del><img src="images/icon/ico_html5x.png" alt="HTML5에서는 지원 안 됨"></del></h3>
@@ -10012,6 +10377,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 				<dl>
 					<dt>메타데이터 콘텐츠 (Metadata Content)</dt>
 					<dd>
+						<p>웹 문서와 관련된 정보를 표현하는 콘텐츠와 다른 문서와의 관계를 유지하는 콘텐츠입니다.</p>
 						<p>메타 데이터 콘텐츠 는 나머지 콘텐츠의 프리젠 테이션 또는 동작을 설정, 다른 문서와 문서의 관계를 설정하거나 다른 "대역 외"정보를 전달하는 콘텐츠입니다.</p>
 						<p><code class="code">base | link | meta | noscript | script | style | template | title</code></p>
 					</dd>
@@ -10032,8 +10398,9 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 					</dd>
 					<dt>섹션 콘텐츠 (Section Conetnt)</dt>
 					<dd>
-						<p>섹션 콘텐츠는 헤딩과 푸터의 유효범위를 지정함</p>
-						<p>제목과 그 내용을 포함하는 범위를 지정함</p>
+						<p>웹 문서의 섹션 영역을 정의하는 요소입니다.</p>
+						<p>섹션 콘텐츠는 헤딩과 푸터의 유효범위를 지정함.</p>
+						<p>제목과 그 내용을 포함하는 범위를 지정함.</p>
 						<p><code class="code">article, aside, nav, section</code></p>
 					</dd>
 					<dt>헤딩 콘텐츠 (Heading Content)</dt>
@@ -10043,6 +10410,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 					</dd>
 					<dt>프레이징 콘텐츠 (Phrasing Content)</dt>
 					<dd>
+						<p>프레이징 콘텐츠는 문장과 텍스트가 관련된 요소입니다.</p>
 						<p>프레이징 콘텐츠는 문서의 텍스트이며, 그 텍스트를 단락 내부레벨에서 마크업을 하는 요소임.</p>
 						<p>프레이징 콘텐츠가 모여 문단을 구성한다.</p>
 						<p>일반적으로 프레이징 콘텐츠 모델 요소를 포함할 수 있는 요소들은 최소 하나의 공백이 아닌 텍스트를 포함하거나 또는 최소 하나의 임베디드 콘텐츠를 포함하여야 한다.</p>
@@ -10056,6 +10424,7 @@ pattern 속성을 사용하여 입력 값이 유효해야한다는 정규 표현
 					</dd>
 					<dt>임베디드 콘텐츠 (Embedded Content)</dt>
 					<dd>
+						<p>다른 소스를 가져오거나 삽입시키는 컨텐츠와 관련된 요소입니다.</p>
 						<p>임베디드 콘텐츠는 다른 리소스(음악, 영상 등)를 문서에 삽입하는 콘텐츠나, 문서에 삽입된 다른 형태에서 유래한 콘텐츠를 말한다.</p>
 						<p>HTML의 네임스페이스에 속하지 않으면서, 콘텐츠를 포함하고 있지만 메타데이터가 아닌 것들을 임베디드 콘텐츠라 한다. (SVG등)</p>
 						<p>임베디드 콘텐츠 요소 중 일부는 외부 리소스가 사용이 불가능 할때 사용할 대체 콘텐츠를 갖는다.</p>
