- 공통영역 작업중 (km)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
 	<![endif]-->
 	<!-- js -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 	<script type="text/javascript" src="/assets/lib/js/uk.js"></script>
 
