--- a/assets/html/sub.html
+++ b/assets/html/sub.html
@@ -53,12 +53,11 @@
 	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
 	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
 	<![endif]-->
-	<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
 	<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
+	<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
 </head>
 <body>
-<div class="wrap main_content">
-
+<div class="wrap sub_content">
 
 	<nav class="uk-skip">
 		<a href="#content">본문내용으로 건너띄기</a>
@@ -87,98 +86,10 @@
 	</header>
 	<!-- //uk-header -->
 
-
-	<main id="content" class="uk_container uk_main main_content" role="main">
-
-		<article class="main_intro">
-			<h2 class="sound_only">Intro</h2>
-			<div class="txt_box">
-				<div class="tit">
-					<strong class="t1">UXCSS <span>&</span> 921430KM</strong>
-					<strong class="t2">COLLABORATION</strong>
-				</div>
-				<!--<p>Created by. Dae-min, Kim & Kwang-nam, Yang & Kyo-sung, Chu </p>-->
-				<p>Created by. Dae-min, Kwang-nam, Kyo-sung </p>
-				<div class="banner">
-					<a href="#" class="bn1">HTML</a>
-					<a href="#" class="bn2">CSS</a>
-					<a href="#" class="bn3">JS</a>
-					<a href="#" class="bn4">ACCESSIBILITY</a>
-					<a href="#" class="bn5">NCS</a>
-				</div>
-			</div>
-			<a href="#" class="next_content"><i>다음 화면</i></a>
-		</article>
-		<!-- //intro -->
-
-		<article class="main_info">
-			<h2 class="sound_only">Information</h2>
-			<div class="txt_area">
-				<div class="txt_box1">
-					<p>UXKM 홈페이지의 모든 문서는 <i>UXKM의 자산</i>입니다.</p>
-					<p>
-						UXKM 홈페이지는 <i>강의 목적으로 제작</i>되었으며,<br>
-						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
-					</p>
-				</div>
-				<div class="txt_box2">
-					<strong>
-						UXKM UI/UX 문서 기준은<br>
-						<b>W3C & MDN</b> 입니다.
-					</strong>
-					<p>
-						모든 예제는 <i>실무와 강의 경험</i>을 바탕으로<br>
-						최대한 이해하기 쉽게 예시를 두어 제작하였습니다.
-					</p>
-					<p>
-						부족한 부분은 계속 보완 및 업데이트할 예정이며,<br>
-						<i>꼭 필요하거나 자주 사용되는 요소</i>들 위주로 설명되어 있어<br>
-						일부 부족한 설명은 강의하면서 진행될 예정입니다.
-					</p>
-				</div>
-			</div>
-		</article>
-		<!-- //information -->
-
-		<article class="main_editor">
-			<h2>UXKM <b>E</b>ditor</h2>
-			<div class="txt">
-				<p>‘코드미러’ 라이브러리를 이용하여 자체개발한 <b>UXKM Editor</b>로 모든 강의의 예제를 표현합니다.</p>
-				<p><i>코드와 결과물을 한 눈에 확인</i>할 수 있고, 테스트한 코드를 <i>html 파일로 다운로드</i>할 수 있습니다.</p>
-				<p>Reset 기능을 이용하여 언제든지 예제 코드로 초기화 할 수 있기 때문에 마음껏 테스트 할 수 있습니다.</p>
-				<p>info button을 클릭하여 자세한 기능을 확인할 수 있으며, 아래 에디터기에서 <i>바로 코드를 테스트 할 수 있습니다</i>.</p>
-			</div>
-			<div class="">
-				에디터기 영역
-			</div>
-		</article>
-		<!-- //UXKM Editor -->
-
-		<article class="main_cfreated">
-			<h2 class="sound_only">Created by</h2>
-			<div class="inner">
-				<dl class="dae_min">
-					<dt>Dae-min, Kim</dt>
-					<dd>김대민</dd>
-					<dd>html, css, javascript, ncs, accessibility</dd>
-				</dl>
-				<dl class="kyo_sung">
-					<dt>Kyo-sung, Chu</dt>
-					<dd>추교성</dd>
-					<dd>html, css, javascript, jquery, design</dd>
-				</dl>
-				<dl class="kwang_nam">
-					<dt>Kwang-nam, Yang</dt>
-					<dd>양광남</dd>
-					<dd>html, css,  jquery, accessibility</dd>
-				</dl>
-			</div>
-		</article>
-		<!-- //Created by -->
-
-	</main>
+	<section id="content" class="uk_container uk_main sub_content" role="main">
+		<p style="color:#fff;">서브</p>
+	</section>
 	<!-- //uk-main -->
-
 
 	<footer class="uk_footer">
 		<nav class="nav">
