- 메인 info 완료(km)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 
 	<!-- js -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
 	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
@@ -136,6 +136,13 @@
 						일부 부족한 설명은 강의하면서 진행될 예정입니다.
 					</p>
 				</div>
+			</div>
+			<div class="keyboard">
+				<span class="step1"><i></i></span>
+				<span class="step2"><i></i></span>
+				<span class="step3"><i></i></span>
+				<span class="step4"><i></i></span>
+				<span class="step5"><i></i></span>
 			</div>
 		</article>
 		<!-- //information -->
