- 메인 에디터 작업 중

--- a/assets/html/sub.html
+++ b/assets/html/sub.html
@@ -20,7 +20,7 @@
 	<meta property="og:url" content="https://uxkm.github.io">
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="html, css, javascript, jQuery 등의 강의를 목적으로 제작">
-	<meta property="og:image" content="<?php echo $themeUrl ?>/_img/og_image.png">
+	<meta property="og:image" content="/assets/lib/img/og_image.png">
 	<meta property="og:image:width" content="1000">
 	<meta property="og:image:height" content="750">
 
