- 메인 에디터 완료(km) - 메인 Created by(km)

--- a/index.html
+++ b/index.html
@@ -45,205 +45,204 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- css -->
+	<link href="assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
+	<link href="assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
-
-	<!-- js -->
-	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
-	<!--[if lt IE 9]>
-	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
-	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
-	<![endif]-->
-	<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
-	<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 </head>
 <body>
-<div class="wrap">
-	<div class="main_page">
+<div class="wrap main_page">
 
+	<nav class="uk-skip">
+		<a href="#content">본문내용으로 건너띄기</a>
+	</nav>
+	<!-- //uk-skip -->
 
-		<nav class="uk-skip">
-			<a href="#content">본문내용으로 건너띄기</a>
-		</nav>
-		<!-- //uk-skip -->
+	<header class="uk_header">
+		<div class="inner">
+			<h1 class="uk_logo"><a href="/">uxkm</a></h1>
 
-		<header class="uk_header">
-			<div class="inner">
-				<h1 class="uk_logo"><a href="/">uxkm</a></h1>
+			<div class="nav_area">
+				<nav class="nav">
+					<a href="/sub.html"><i>UI/UX Assets</i></a>
+					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
+					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
+				</nav>
 
-				<div class="nav_area">
-					<nav class="nav">
-						<a href="/assets/html/sub.html"><i>UI/UX Assets</i></a>
-						<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
-						<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
-					</nav>
+				<aside class="aside">
+					<button type="button" class="search_btn"><i>Search</i></button>
+					<div class="layer_box search_area">검색창</div>
+					<button type="button" class="sitemap_btn"><i>site map</i></button>
+					<div class="layer_box sitemap_area">검색창</div>
+				</aside>
+			</div>
+		</div>
+	</header>
+	<!-- //uk-header -->
 
-					<aside class="aside">
-						<button type="button" class="search_btn"><i>Search</i></button>
-						<div class="layer_box search_area">검색창</div>
-						<button type="button" class="sitemap_btn"><i>site map</i></button>
-						<div class="layer_box sitemap_area">검색창</div>
-					</aside>
+	<main id="content" class="uk_container uk_main main_content" role="main">
+
+		<article class="main_intro">
+			<h2 class="sound_only">Intro</h2>
+			<div class="txt_box">
+				<div class="tit">
+					<strong class="t1">UXCSS <span>&</span> 921430KM</strong>
+					<strong class="t2">COLLABORATION</strong>
+				</div>
+				<!--<p>Created by. Dae-min, Kim & Kwang-nam, Yang & Kyo-sung, Chu </p>-->
+				<p>Created by. Dae-min, Kwang-nam, Kyo-sung </p>
+				<div class="banner">
+					<a href="#" class="bn1">HTML</a>
+					<a href="#" class="bn2">CSS</a>
+					<a href="#" class="bn3">JS</a>
+					<a href="#" class="bn4">ACCESSIBILITY</a>
+					<a href="#" class="bn5">NCS</a>
 				</div>
 			</div>
-		</header>
-		<!-- //uk-header -->
+			<a href="#" class="next_content"><i>다음 화면</i></a>
+		</article>
+		<!-- //intro -->
 
-
-		<main id="content" class="uk_container uk_main main_content" role="main">
-
-			<article class="main_intro">
-				<h2 class="sound_only">Intro</h2>
-				<div class="txt_box">
-					<div class="tit">
-						<strong class="t1">UXCSS <span>&</span> 921430KM</strong>
-						<strong class="t2">COLLABORATION</strong>
-					</div>
-					<!--<p>Created by. Dae-min, Kim & Kwang-nam, Yang & Kyo-sung, Chu </p>-->
-					<p>Created by. Dae-min, Kwang-nam, Kyo-sung </p>
-					<div class="banner">
-						<a href="#" class="bn1">HTML</a>
-						<a href="#" class="bn2">CSS</a>
-						<a href="#" class="bn3">JS</a>
-						<a href="#" class="bn4">ACCESSIBILITY</a>
-						<a href="#" class="bn5">NCS</a>
-					</div>
-				</div>
-				<a href="#" class="next_content"><i>다음 화면</i></a>
-			</article>
-			<!-- //intro -->
-
-			<article class="main_info">
-				<h2 class="sound_only">Information</h2>
-				<div class="txt_area">
-					<div class="txt_box1">
-						<p>UXKM 홈페이지의 모든 문서는 <i>UXKM의 자산</i>입니다.</p>
-						<p>
-							UXKM 홈페이지는 <i>강의 목적으로 제작</i>되었으며,<br>
-							공부를 위해 홈페이지에 접속한 모두를 환영합니다.
-						</p>
-					</div>
-					<div class="txt_box2">
-						<strong>
-							UXKM UI/UX 문서 기준은<br>
-							<b>W3C & MDN</b> 입니다.
-						</strong>
-						<p>
-							모든 예제는 <i>실무와 강의 경험</i>을 바탕으로<br>
-							최대한 이해하기 쉽게 예시를 두어 제작하였습니다.
-						</p>
-						<p>
-							부족한 부분은 계속 보완 및 업데이트할 예정이며,<br>
-							<i>꼭 필요하거나 자주 사용되는 요소</i>들 위주로 설명되어 있어<br>
-							일부 부족한 설명은 강의하면서 진행될 예정입니다.
-						</p>
-					</div>
-				</div>
-				<div class="keyboard">
-					<span class="step1"><i></i></span>
-					<span class="step2"><i></i></span>
-					<span class="step3"><i></i></span>
-					<span class="step4"><i></i></span>
-					<span class="step5"><i></i></span>
-				</div>
-			</article>
-			<!-- //information -->
-
-			<article class="main_editor">
-				<h2 class="fas"><span>UXKM <i>E</i>ditor</span></h2>
-				<div class="txt">
+		<article class="main_info">
+			<h2 class="sound_only">Information</h2>
+			<div class="txt_area">
+				<div class="txt_box1">
+					<p>UXKM 홈페이지의 모든 문서는 <i>UXKM의 자산</i>입니다.</p>
 					<p>
-						‘코드미러’ 라이브러리를 이용하여 자체개발한<br class="dp_mb" />
-						<b>UXKM Editor</b>로 모든 강의의 예제를 표현합니다.
+						UXKM 홈페이지는 <i>강의 목적으로 제작</i>되었으며,<br>
+						공부를 위해 홈페이지에 접속한 모두를 환영합니다.
 					</p>
-
-					<p class="dp_pc"><i>코드와 결과물을 한 눈에 확인</i>할 수 있고, 테스트한 코드를 <i>html 파일로 다운로드</i>할 수 있습니다.</p>
-					<p class="dp_pc">Reset 기능을 이용하여 언제든지 예제 코드로 초기화 할 수 있기 때문에 마음껏 테스트 할 수 있습니다.</p>
-					<p class="dp_pc">info button을 클릭하여 자세한 기능을 확인할 수 있으며, <br>아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
-
-					<p class="dp_mb"><i>코드와 결과물을 한 눈에 확인</i>할 수 있으며,</p>
-					<p class="dp_mb">아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
 				</div>
+				<div class="txt_box2">
+					<strong>
+						UXKM UI/UX 문서 기준은<br>
+						<b>W3C & MDN</b> 입니다.
+					</strong>
+					<p>
+						모든 예제는 <i>실무와 강의 경험</i>을 바탕으로<br>
+						최대한 이해하기 쉽게 예시를 두어 제작하였습니다.
+					</p>
+					<p>
+						부족한 부분은 계속 보완 및 업데이트할 예정이며,<br>
+						<i>꼭 필요하거나 자주 사용되는 요소</i>들 위주로 설명되어 있어<br>
+						일부 부족한 설명은 강의하면서 진행될 예정입니다.
+					</p>
+				</div>
+			</div>
+			<div class="keyboard">
+				<span class="step1"><i></i></span>
+				<span class="step2"><i></i></span>
+				<span class="step3"><i></i></span>
+				<span class="step4"><i></i></span>
+				<span class="step5"><i></i></span>
+			</div>
+		</article>
+		<!-- //information -->
 
-				<div class="editor_wrap">
-					<div class="uk_editor" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
-						<div class="code_wrap">
-							<textarea>
+		<article class="main_editor">
+			<h2 class="fas"><span>UXKM <i>E</i>ditor</span></h2>
+			<div class="txt">
+				<p>
+					‘코드미러’ 라이브러리를 이용하여 자체개발한<br class="dp_mb" />
+					<b>UXKM Editor</b>로 모든 강의의 예제를 표현합니다.
+				</p>
+
+				<p class="dp_pc"><i>코드와 결과물을 한 눈에 확인</i>할 수 있고, 테스트한 코드를 <i>html 파일로 다운로드</i>할 수 있습니다.</p>
+				<p class="dp_pc">Reset 기능을 이용하여 언제든지 예제 코드로 초기화 할 수 있기 때문에 마음껏 테스트 할 수 있습니다.</p>
+				<p class="dp_pc">info button을 클릭하여 자세한 기능을 확인할 수 있으며, <br>아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
+
+				<p class="dp_mb"><i>코드와 결과물을 한 눈에 확인</i>할 수 있으며,</p>
+				<p class="dp_mb">아래 에디터기에서 <i>코드를 테스트 할 수 있습니다</i>.</p>
+			</div>
+
+			<div class="editor_wrap">
+				<div class="uk_editor" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap">
+						<textarea>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-	<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>HTML Intro</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Welcome UXKM</title>
 </head>
 <body>
 
-	<h1>여러분을 환영합니다!!</h1>
+<h1>UXKM 홈페이지 입니다.</h1>
+<h2>여러분을 환영합니다!!</h2>
 
 </body>
 </html>
-							</textarea>
-						</div>
+						</textarea>
 					</div>
 				</div>
-			</article>
-			<!-- //UXKM Editor -->
-
-			<article class="main_created">
-				<h2 class="sound_only">Created by</h2>
-				<div class="inner">
-					<dl class="dae_min">
-						<dt>Dae-min, Kim</dt>
-						<dd>김대민</dd>
-						<dd>html, css, javascript, ncs, accessibility</dd>
-					</dl>
-					<dl class="kyo_sung">
-						<dt>Kyo-sung, Chu</dt>
-						<dd>추교성</dd>
-						<dd>html, css, javascript, jquery, design</dd>
-					</dl>
-					<dl class="kwang_nam">
-						<dt>Kwang-nam, Yang</dt>
-						<dd>양광남</dd>
-						<dd>html, css,  jquery, accessibility</dd>
-					</dl>
-				</div>
-			</article>
-			<!-- //Created by -->
-
-		</main>
-		<!-- //uk-main -->
-
-
-		<footer class="uk_footer">
-			<nav class="nav">
-				<div class="depth1">
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>UI/UX Assets</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
-				</div>
-				<div class="depth2">
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>HTML</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>CSS</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>JAVASCRIPT</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>ACCESSIBILITY</i></a>
-					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>NCS</i></a>
-				</div>
-			</nav>
-			<div class="btm">
-				<h1 class="uk_logo"><a href="#">uxkm</a></h1>
-				<p class="copy">&copy; 2019 All Right Reserved. By UXKM.</p>
 			</div>
-		</footer>
-		<!-- //uk-footer -->
+		</article>
+		<!-- //UXKM Editor -->
 
-	</div><!-- //main_page -->
+		<article class="main_created">
+			<h2 class="sound_only">Created by</h2>
+			<div class="inner">
+				<dl class="dae_min">
+					<dt>Dae-min, Kim</dt>
+					<dd>김대민</dd>
+					<dd>html, css, javascript, ncs, accessibility</dd>
+				</dl>
+				<dl class="kyo_sung">
+					<dt>Kyo-sung, Chu</dt>
+					<dd>추교성</dd>
+					<dd>html, css, javascript, jquery, design</dd>
+				</dl>
+				<dl class="kwang_nam">
+					<dt>Kwang-nam, Yang</dt>
+					<dd>양광남</dd>
+					<dd>html, css,  jquery, accessibility</dd>
+				</dl>
+			</div>
+		</article>
+		<!-- //Created by -->
+
+	</main>
+	<!-- //uk-main -->
+
+	<footer class="uk_footer">
+		<nav class="nav inner">
+			<div class="depth1">
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>UI/UX Assets</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
+			</div>
+			<div class="depth2">
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>HTML</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>CSS</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>JAVASCRIPT</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>ACCESSIBILITY</i></a>
+				<a href="#" onclick="alert('페이지 준비중'); return false;"><i>NCS</i></a>
+			</div>
+		</nav>
+		<div class="btm">
+			<h1 class="uk_logo"><a href="#">uxkm</a></h1>
+			<p class="copy">&copy; 2019 All Right Reserved. By UXKM.</p>
+		</div>
+	</footer>
+	<!-- //uk-footer -->
+
 </div><!-- //wrap -->
 
 
+<!-- js ------------------------------------ -->
+<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
+<!--[if lt IE 9]>
+<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
+<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
+<![endif]-->
+
+<!-- plugin -->
+<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
+
 <!-- codemirror -->
-<link href="assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 기본 -->
 <script src="assets/lib/js/codemirror/lib/codemirror.js"></script><!-- 기본 -->
 <script src="assets/lib/js/codemirror/addon/selection/active-line.js"></script><!-- 줄 강조 -->
 <script src="assets/lib/js/codemirror/addon/search/match-highlighter.js"></script><!-- 같은 단어 강조 -->
@@ -255,7 +254,6 @@
 <script src="assets/lib/js/codemirror/mode/php/php.js"></script><!-- 모드 -->
 <script src="assets/lib/js/codemirror/mode/xml/xml.js"></script><!-- 모드 -->
 <link href="assets/lib/js/codemirror/theme/moxer.css" rel="stylesheet" /><!-- 테마 -->
-<link href="assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 스크롤바 -->
 <script src="assets/lib/js/codemirror/addon/scroll/simplescrollbars.js"></script><!-- 스크롤바 -->
 <script src="assets/lib/js/codemirror/codemirror.js"></script>
 
