--- a/sub.html
+++ b/sub.html
@@ -45,19 +45,21 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- css -->
+	<link href="assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
+	<link href="assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
 
 	<!-- js -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
 	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
 	<![endif]-->
-	<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 	<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
+	<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
 </head>
 <body>
-<div class="wrap sub_content">
+<div class="wrap sub_page">
 
 	<nav class="uk-skip">
 		<a href="#content">본문내용으로 건너띄기</a>
@@ -70,7 +72,7 @@
 
 			<div class="nav_area">
 				<nav class="nav">
-					<a href="/assets/html/sub.html"><i>UI/UX Assets</i></a>
+					<a href="/sub.html"><i>UI/UX Assets</i></a>
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
 				</nav>
@@ -114,7 +116,36 @@
 	<!-- //uk-footer -->
 
 
-	<script type="text/javascript" src="/assets/lib/js/uk.js"></script>
 </div><!-- //wrap -->
+
+
+<!-- js ------------------------------------ -->
+<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
+<!--[if lt IE 9]>
+<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
+<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
+<![endif]-->
+
+<!-- plugin -->
+<script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="/assets/lib/js/plugin/ukDetect-1.0.0.js"></script>
+
+<!-- codemirror -->
+<script src="assets/lib/js/codemirror/lib/codemirror.js"></script><!-- 기본 -->
+<script src="assets/lib/js/codemirror/addon/selection/active-line.js"></script><!-- 줄 강조 -->
+<script src="assets/lib/js/codemirror/addon/search/match-highlighter.js"></script><!-- 같은 단어 강조 -->
+<script src="assets/lib/js/codemirror/mode/css/css.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/sass/sass.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/htmlmixed/htmlmixed.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/htmlembedded/htmlembedded.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/javascript/javascript.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/php/php.js"></script><!-- 모드 -->
+<script src="assets/lib/js/codemirror/mode/xml/xml.js"></script><!-- 모드 -->
+<link href="assets/lib/js/codemirror/theme/moxer.css" rel="stylesheet" /><!-- 테마 -->
+<script src="assets/lib/js/codemirror/addon/scroll/simplescrollbars.js"></script><!-- 스크롤바 -->
+<script src="assets/lib/js/codemirror/codemirror.js"></script>
+
+<!-- uk.js -->
+<script type="text/javascript" src="/assets/lib/js/uk.js"></script>
 </body>
 </html>
