--- a/assets/lib/inc/uk_header.html
+++ b/assets/lib/inc/uk_header.html
@@ -70,7 +70,7 @@
 
 			<div class="nav_area">
 				<nav class="nav">
-					<a href="/assets/html/sub.html"><i>UI/UX Assets</i></a>
+					<a href="/sub.html"><i>UI/UX Assets</i></a>
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Project GUIDE</i></a>
 					<a href="#" onclick="alert('페이지 준비중'); return false;"><i>Web Trends</i></a>
 				</nav>
