- 메인 Created by 완료(km)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css?family=Anton|Noto+Sans+KR:100,300,400,500,700,900|Open+Sans:300,400,600,700,800&display=swap&subset=cyrillic,greek,korean,latin-ext,vietnamese" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Anton|Cinzel+Decorative:400,700,900|Noto+Sans+KR:100,300,400,500,700,900|Open+Sans:300,400,600,700,800&display=swap&subset=korean,latin-ext,vietnamese" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"><meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -161,16 +161,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
-<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Welcome UXKM</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+	<meta name="format-detection" content="telephone=no, address=no, email=no, date=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Welcome UXKM</title>
 </head>
 <body>
 
-<h1>UXKM 홈페이지 입니다.</h1>
-<h2>여러분을 환영합니다!!</h2>
+	<h1>UXKM 홈페이지 입니다.</h1>
+	<h2>여러분을 환영합니다!!</h2>
 
 </body>
 </html>
@@ -181,25 +181,37 @@
 		</article>
 		<!-- //UXKM Editor -->
 
-		<article class="main_created">
-			<h2 class="sound_only">Created by</h2>
-			<div class="inner">
-				<dl class="dae_min">
-					<dt>Dae-min, Kim</dt>
-					<dd>김대민</dd>
-					<dd>html, css, javascript, ncs, accessibility</dd>
-				</dl>
-				<dl class="kyo_sung">
-					<dt>Kyo-sung, Chu</dt>
-					<dd>추교성</dd>
-					<dd>html, css, javascript, jquery, design</dd>
-				</dl>
-				<dl class="kwang_nam">
-					<dt>Kwang-nam, Yang</dt>
-					<dd>양광남</dd>
-					<dd>html, css,  jquery, accessibility</dd>
-				</dl>
-			</div>
+		<article class="main_created inner">
+			<h2><span>C</span>reated by</h2>
+			<ul class="created">
+				<li class="dae_min">
+					<div class="box">
+						<strong>DAE-MIN, KIM</strong>
+						<div>
+							<b>김대민</b>
+							<p>html, css, jquery, ncs, accessibility</p>
+						</div>
+					</div>
+				</li>
+				<li class="kyo_sung">
+					<a href="//921430km.com" target="_blank" class="box">
+						<strong>KYO-SUNG, CHU</strong>
+						<div>
+							<b>추교성</b>
+							<p>html, css, javascript, jquery, design</p>
+						</div>
+					</a>
+				</li>
+				<li class="kwang_nam">
+					<div class="box">
+						<strong>KWANG-NAM, YANG</strong>
+						<div>
+							<b>양광남</b>
+							<p>html, css, javascript,  jquery, accessibility</p>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</article>
 		<!-- //Created by -->
 
