--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<meta name="robots" content="index,follow">
 	<meta http-equiv="imagetoolbar" content="no">
 	<meta http-equiv="X-UA-Compatible" content="IE=10,chrome=1">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Cache-Control" content="no-cache">
 
 	<title>UXKM</title>
 
@@ -48,6 +50,13 @@
 	<link href="assets/lib/js/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet" /><!-- 코드미러 스크롤바 -->
 	<link href="assets/lib/js/codemirror/lib/codemirror.css" rel="stylesheet" /><!-- 코드미러 기본 -->
 	<link href="/assets/lib/css/uk.css" rel="stylesheet" />
+
+	<!-- js -->
+	<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
+	<!--[if lt IE 9]>
+	<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
+	<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body>
 <div class="wrap main_page">
@@ -244,11 +253,6 @@
 
 
 <!-- js ------------------------------------ -->
-<script type="text/javascript" src="/assets/lib/js/plugin/jquery-1.9.1.min.js"></script>
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/ukncs/js/plugin/html5.js"></script>
-<script type="text/javascript" src="/ukncs/js/plugin/respond.min.js"></script>
-<![endif]-->
 
 <!-- plugin -->
 <script type="text/javascript" src="/assets/lib/js/plugin/jquery.easing.1.3.min.js"></script>
