- 메인 디테일 수정중

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 <body>
 <div class="wrap main_page">
 
+	<p class="h_test" style="display:none; position:fixed; left:0; top:0; z-index:9999; padding:30px 50px; font-size:16px; color:#fff; background:red;">0</p>
+
 	<nav class="uk-skip">
 		<a href="#content">본문내용으로 건너띄기</a>
 	</nav>
